2011-02-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	* timer/timer.c: Include <rtems/btimer.h>.
	Fix benchmark_timer_read() definition.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2010-08-03	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* console/console.c: Add BSP_poll_char.

2010-04-28	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* timer/timer.c: Remove warnings.

2010-04-28	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* startup/bspclean.c, startup/bspstart.c: Remove warnings.

2009-12-16      Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* console/console.c: adapted to new prototype for *_write
	function

2009-12-08	Eric Norum <wenorum@lbl.gov>

	PR 1479/bsps
	* fatal/bspfatal.c: Complete strcat conversion.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/mvme167.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Don't add -ansi -fasm to CFLAGS.

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/mvme167.cfg: New (relocated from /make/custom).

2009-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/console.c: Reflect termios_baud_to_number having been
	renamed to rtems_termios_baud_to_number.

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.

2009-08-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/bsp.h: Eliminate BSPs defining NUMBER_OF_TERMIOS_PORTS.
	Should be automatically handled by confdefs.h or the application.

2009-08-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* console/console.c, timer/timer.c: Fix warnings and typos.

2009-08-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* console/console.c: Convert calls to legacy routine rtems_clock_get(
	RTEMS_CLOCK_GET_xxx, ..) to rtems_clock_get_xxx().

2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to