@@ -43,12 +43,12 @@ static void bsp_return_to_monitor_trap( void )
 
   lcsr->intr_ena = 0;               /* disable interrupts */
   m68k_set_vbr(0xFFE00000);         /* restore 167Bug vectors */
-  asm volatile( "trap   #15\n\t"    /* trap to 167Bug */
+  __asm__ volatile( "trap   #15\n\t"    /* trap to 167Bug */
                 ".short 0x63" );    /* return to 167Bug (.RETURN) */
 
   /* restart program */
   start_addr = start;
-  asm volatile( "jmp %0@" : "=a" (start_addr) : "0" (start_addr) );
+  __asm__ volatile( "jmp %0@" : "=a" (start_addr) : "0" (start_addr) );
 }
 
 /*
@@ -77,5 +77,5 @@ static void bsp_return_to_monitor_trap( void )
 void bsp_cleanup( void )
 {
    M68Kvec[ 45 ] = bsp_return_to_monitor_trap;
-   asm volatile( "trap #13" );
+   __asm__ volatile( "trap #13" );
 }
